[gd_scene load_steps=21 format=2]

[ext_resource path="res://res/creat/jinn_animation/Attack2.png" type="Texture" id=1]
[ext_resource path="res://res/creat/jinn_animation/Attack1.png" type="Texture" id=2]
[ext_resource path="res://res/creat/jinn_animation/Flight1.png" type="Texture" id=3]
[ext_resource path="res://res/creat/jinn_animation/Death1.png" type="Texture" id=4]
[ext_resource path="res://res/creat/jinn_animation/Death3.png" type="Texture" id=5]
[ext_resource path="res://res/creat/jinn_animation/Death4.png" type="Texture" id=6]
[ext_resource path="res://res/creat/jinn_animation/Flight4.png" type="Texture" id=7]
[ext_resource path="res://res/creat/jinn_animation/Attack4.png" type="Texture" id=8]
[ext_resource path="res://res/creat/jinn_animation/Flight2.png" type="Texture" id=9]
[ext_resource path="res://res/creat/jinn_animation/Flight3.png" type="Texture" id=10]
[ext_resource path="res://res/creat/jinn_animation/Death2.png" type="Texture" id=11]
[ext_resource path="res://res/creat/jinn_animation/Death6.png" type="Texture" id=12]
[ext_resource path="res://res/creat/jinn_animation/Death5.png" type="Texture" id=13]
[ext_resource path="res://res/creat/jinn_animation/Attack3.png" type="Texture" id=14]
[ext_resource path="res://Data/Jinn.gd" type="Script" id=15]
[ext_resource path="res://Data/DamageArea.tscn" type="PackedScene" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 14 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 11 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 13 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 22.25, 39.5 )

[node name="Jinn" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 2
script = ExtResource( 15 )

[node name="walk" type="AnimatedSprite" parent="."]
position = Vector2( 13, -8 )
frames = SubResource( 1 )

[node name="attack" type="AnimatedSprite" parent="."]
position = Vector2( 14, -2 )
frames = SubResource( 2 )

[node name="death" type="AnimatedSprite" parent="."]
position = Vector2( 13, -7 )
frames = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -6.5, -3 )
scale = Vector2( 2.35, 4.2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6.75, -2.5 )
shape = SubResource( 4 )

[node name="Effect" type="Timer" parent="."]

[node name="DamageArea" parent="." instance=ExtResource( 16 )]
position = Vector2( 166, -2 )
scale = Vector2( 60, 1.5 )

[node name="shoot" type="Position2D" parent="."]
position = Vector2( 54.6667, 12 )

[connection signal="animation_finished" from="attack" to="." method="_on_attack_animation_finished"]
[connection signal="animation_finished" from="death" to="." method="_on_death_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Effect" to="." method="_on_Effect_timeout"]
